fix: add overflow: hidden

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -63,7 +63,7 @@ main {
 	padding-top: 90px;
 	scrollbar-width: none;
 	-ms-overflow-style: none;
-
+	overflow: hidden;
 	@include mixins.responsive("tablet") {
 		padding-top: 100px;
 	}
